--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-/*
-body{
-	background-image: url(assets/img/travel_bg.jpg);
-	background-repeat: no-repeat;
+.mybutton{
+	background-color: cadetblue;
+	border:none;
+	color: white;
+	padding: 5%;
+	text-align: center ;
+	text-decoration: none;
+	display: inline-block;
+	front-size:	5%;
 }
-*/
