--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 .mybutton{
-	background-color: cadetblue;
+	background-color: rgb(17, 128, 219);
 	border:none;
 	color: white;
-	padding: 5%;
+	padding: 1%;
 	text-align: center ;
 	text-decoration: none;
 	display: inline-block;
 	front-size:	5%;
+	width: 25%;
 }
 
 box{
-	width: 320px;
-  	padding: 10px;
+	width: 100%;
+  	padding: 2%;
   	border: 5px solid rgb(91, 123, 212);
   	margin: 0;
 }
