update box noticias

--- a/style.css
+++ b/style.css
@@ -10,23 +10,12 @@
 	width: 25%;
 }
 
-.box1{
+.box{
 	width: 100%;
   	padding: 2%;
   	border: 5px solid rgb(91, 123, 212);
-  	margin: 0;
-}	
-
-.box2{
-	width: 100%;
-  	padding: 2%;
-  	border: 5px solid rgb(91, 123, 212);
-  	margin: 0;
-}
-
-.box3{
-	width: 100%;
-  	padding: 2%;
-  	border: 5px solid rgb(91, 123, 212);
-  	margin: 0;
+	border-collapse: separate;
+	border-spacing: 20%;
+	margin-top: 5%;
+  	margin-bottom: 5%;
 }
