--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
 	display: inline-block;
 	front-size:	5%;
 	width: 25%;
+	
+}
+
+.mybutton:hover{
+	background-color: rgb(105, 208, 248);
 }
 
 .box{
