--- a/style.css
+++ b/style.css
@@ -11,6 +11,37 @@
 	
 }
 
+.mybtn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.mybtn-blue {
+  color: #007fff;
+   background-color: transparent;
+  background-image: none;
+  border-color: #007bff;
+}
+
+.mybtn-blue:hover {
+   color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
 .mybutton:hover{
 	background-color: rgb(105, 208, 248);
 }
