--- a/style.css
+++ b/style.css
@@ -72,24 +72,24 @@ body, html {
 
 /* Style tab links */
 .tablink {
-  background-color: #555;
-  color: white;
+  background-color: transparent;
+  color: black;
   float: left;
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
+  padding: 12px 16px;
   font-size: 17px;
   width: 25%;
 }
 
 .tablink:hover {
-  background-color: #777;
+  background-color: rgb(29, 107, 209);
 }
 
 /* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
-  color: white;
+  color: black;
   display: none;
   padding: 100px 20px;
   height: 100%;
