--- a/style.css
+++ b/style.css
@@ -78,19 +78,19 @@ body, html {
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 12px 16px;
+  padding: 12px 15px;
   font-size: 17px;
   width: 25%;
 }
 
 .tablink:hover {
-  background-color: rgb(29, 107, 209);
+  background-color: rgb(128, 191, 255);
 }
 
 /* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
   color: black;
   display: none;
-  padding: 100px 20px;
+  padding-top: 5%;
   height: 100%;
 }
